2014-11-29  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xs-element): Add is-group slot.
	(soap-xs-parse-element): Set is-group slot.
	(soap-resolve-references-for-xs-element): Skip is-group elements.
	(soap-xs-complex-type): Add is-group slot.
	(soap-xs-parse-complex-type): Set is-group slot.
	(soap-xs-parse-sequence): Parse xsd:group elements.
	(soap-resolve-references-for-xs-complex-type): Inline elements
	from referenced xsd:group nodes.
	(soap-parse-schema): Parse xsd:group nodes.

2014-11-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-invoke): Don't set url-http-version to 1.0.

2014-11-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-complex-type): Allow choice nodes
	to accept multiple values.

2014-11-12  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-body): Check parameters argument for
	extra header values.

2014-11-11  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-well-known-xmlns): Add wsa and wsaw tags.
	(soap-operation): Add input-action and output-action slots.
	(soap-parse-operation): Parse wsaw:Action nodes.
	(soap-encode-body): Encode service-url for WS-Addressing.
	(soap-create-envelope): Likewise.
	(soap-invoke): Update soap-create-envelope call to provide
	service-url argument.

2014-09-24  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-complex-type): Support xsi:type
	override attribute.
	(soap-decode-array): Likewise.

2014-09-23  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-parse-schema): Handle location attribute.

2014-08-20  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-type): Check that multiRef matched
	validation regexp.

2014-08-20  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-simple-type): Encode xsd:list
	nodes.
	(soap-decode-xs-simple-type): Decode xsd:list nodes.
